2000-05-03  Laurent Pautet  <pautet@inf.enst.fr>

	* s-gardfs.adb, s-gardfs.ads: Add a field Lock in DFS_Data_Type
	and use new package System.Global_Locks.

2000-04-30  Laurent Pautet  <pautet@inf.enst.fr>

	* s-gardfs.adb, s-garsto.adb: Get rid of GNAT.Task_Lock because it 
	raises a wrong ceiling violation using FSU threads. Use
	Garlic.Soft_Links instead.

2000-04-20  Laurent Pautet  <pautet@inf.enst.fr>

	* Makefile.am, Makefile.in: Add s-shamem files to the GNAT files
 	to replace. Fix typo.

	* s-garhea.adb: Resume env. task when the partition cannot get its
 	partition id to activate shutdown and raise an exception in env
 	task. Add the storage data location to the boot data sent by a
 	partition to the boot server.

	* s-gaplsp.ads.in: Define support name and specific data for
 	default storage.

	* s-garopt.adb, s-garopt.ads: Add new option data_location and its
 	accessors (flag and env var). Minor reformatting.

	* s-garpar.adb, s-garpar.ads: Add Mem_Locations to Partition_Info
 	which defines its data storage location and replace All_Locations
 	with Net_Locations. Update partition output. Define Mem_Locations
 	accessors. Improve pid allocation and validation to deal with
 	passive partitions which cannot register themselves.  Its clients
 	are in charge of doing the job and the name of this partition is
 	supposed to be unique to resolve pid allocation conflits. Resume
 	env task when the pid allocation proceess fails (return null
 	pid). Add Register_Passive_Partition to send a boot info on a
 	passive partition to boot server. Add code to handle passive
 	partition registration for a boot mirror and reorganize
 	accordingly. Fix the computation of the list of partitions that
 	take part into the global termination (because of passive
 	partition). Rename Send_Boot_Request into
 	Send_Partition_Definition and use this procedure to register a
 	passive partition.

	* s-garuni.adb, s-garuni.ads: Improve unit registration to allow